added basic html

--- a/intro.html
+++ b/intro.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
+
 <html>
-<title>HTML Tutorial</title>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<title>First Site</title>
 <body>
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 
+<table>
+    <tr>
+      <th>YAML</th>
+      <th>JSON</th>
+    </tr>
+    <tr>
+      <td><textarea  rows="4" cols="50" contentEditable=true>
+        At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies.
+        </textarea></td>
+      <td><textarea  rows="4" cols="50" contentEditable=true>
+        At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies.
+        </textarea></td>
+    </tr>
+  </table>
+  
 </body>
 </html>
 
