--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
-
+<form METHOD="POST" ACTION="">
 <table>
     <tr>
       <th>YAML</th>
@@ -24,7 +24,8 @@
         </textarea></td>
     </tr>
   </table>
-  
+  <p><input type="submit" value="Submit" name="submission1"></P>
+  </form>
 </body>
 </html>
 
