--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <title>First Site</title>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script type="text/javascript" src="send.js"></script>
 <body>
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
-<form METHOD="POST" ACTION="">
+<form method="post" action="https://k3tye3jfp2.execute-api.us-east-1.amazonaws.com/default/tryAcceptJSONInRequest">
 <table>
     <tr>
       <th>YAML</th>
       <th>JSON</th>
     </tr>
     <tr>
-      <td><textarea  rows="4" cols="50" contentEditable=true>
+      <td><textarea  rows="4" cols="50" contentEditable=true name="YAML">
         At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies.
         </textarea></td>
       <td><textarea  rows="4" cols="50" contentEditable=true>
@@ -24,8 +30,8 @@
         </textarea></td>
     </tr>
   </table>
-  <p><input type="submit" value="Submit" name="submission1"></P>
-  </form>
+  <button id="submit" type="submit">Submit</button>
+</form>
 </body>
 </html>
 
