--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <th>JSON</th>
     </tr>
     <tr>
-      <td><textarea  rows="4" cols="50" contentEditable=true name="YAML">
+      <td><textarea  rows="4" cols="50" contentEditable=true name="YAML" id='YAML'>
         At w3schools.com you will learn how to make a website. We offer free tutorials in all web development technologies.
         </textarea></td>
       <td><textarea  rows="4" cols="50" contentEditable=true>
